--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
             <div class="carte-hotel1">
                 <a href="#">
-                    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="soleil matin">
+                    <img src="images/hebergements/Le_soleil_du_matin.jpg" alt="soleil matin">
                     <h3>Hôtel Le soleil du matin</h3>
                     <h4>Nuit à partir de 128<strong>€</strong></h4>
                     <ul>
@@ -101,7 +101,7 @@
 
             <div class="carte-hotel1">
                 <a href="#">
-                    <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="coeur de l'eau">
+                    <img src="images/hebergements/Au_coeur_de_eau.jpg" alt="coeur de l'eau">
                     <h3>Au coeur de l'eau Chambre d'hôtes</h3>
                     <h4>Nuit à partir de 71<strong>€</strong></h4>
                     <ul>
@@ -117,7 +117,7 @@
 
             <div class="carte-hotel1">
                 <a href="#">
-                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="bleublanc">
+                    <img src="images/hebergements/Tout_bleu_et_Blanc.jpg" alt="bleublanc">
                     <h3>Hôtel Tout bleu et Blanc</h3>
                     <h4>Nuit à partir de 68<strong>€</strong></h4>
                     <ul>
@@ -137,7 +137,7 @@
             <p class="texte2-hotel2">Hébergements à Marseille</p>   
             <div class="carte-hotel2">
                 <a href="#">
-                    <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="cannebiere">
+                    <img src="images/hebergements/Auberge_La_Cannebiere.jpg" alt="cannebiere">
                     <h3>Auberge La Cannebière</h3>
                     <h4>Nuit à partir de 25<strong>€</strong></h4>
                     <ul>
@@ -151,7 +151,7 @@
             </div>
             <div class="carte-hotel2">
                 <a href="#">
-                    <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="port">
+                    <img src="images/hebergements/Hotel_du_port.jpg" alt="port">
                     <h3>Hôtel du port</h3>
                     <h4>Nuit à partir de 52<strong>€</strong></h4>
                     <ul>
@@ -166,7 +166,7 @@
 
             <div class="carte-hotel2">
                 <a href="#">
-                    <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg " alt="mouettes">
+                    <img src="images/hebergements/Hotel_les_mouettes.jpg " alt="mouettes">
                     <h3>Hôtel les mouettes</h3>
                     <h4>Nuit à partir de 76<strong>€</strong></h4>
                     <ul>
@@ -180,7 +180,7 @@
             </div>
             <div class="carte-hotel2">
                 <a href="#">
-                    <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="mer">
+                    <img src="images/hebergements/Hotel_de_la_mer.jpg" alt="mer">
                     <h3>Hôtel de la mer</h3>
                     <h4>Nuit à partir de 46<strong>€</strong></h4>
                     <ul>
@@ -194,7 +194,7 @@
             </div>
             <div class="carte-hotel2">
                 <a href="#">
-                    <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="panier">
+                    <img src="images/hebergements/Auberge_Le_Panier.jpg" alt="panier">
                     <h3>Auberge Le Panier</h3>
                     <h4>Nuit à partir de 23<strong>€</strong></h4>
                     <ul>
@@ -208,7 +208,7 @@
             </div>
             <div class="carte-hotel2">
                 <a href="#">
-                    <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="amina">
+                    <img src="images/hebergements/Hotel_chez_Amina.jpg" alt="amina">
                     <h3>Hôtel chez Amina</h3>
                     <h4>Nuit à partir de 96<strong>€</strong></h4>
                     <ul>
@@ -234,37 +234,37 @@
             
             <div class="activite-vieuxport">
                 <a href="#">
-                    <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="port">
+                    <img src="images/activites/Vieux_Port.jpg" alt="port">
                     <h3>Vieux Port</h3>
                 </a>
             </div>
             <div class="activite-fort">
                 <a href="#">
-                    <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort">
+                    <img src="images/activites/Fort_de_Pomègues.jpg" alt="fort">
                     <h3>Fort de Pomègues</h3>
                 </a>
             </div>
             <div class="activite-frioul">
                 <a href="#">
-                    <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="frioul">
+                    <img src="images/activites/iles_de_Frioul.jpg" alt="frioul">
                     <h3>Îles de Frioul</h3>
                 </a>
             </div>
             <div class="activite-calanques">
                 <a href="#">
-                    <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="calanques">
+                    <img src="images/activites/Parc_National_des_Calanques.jpg" alt="calanques">
                     <h3>Parc National des Calanques</h3>
                 </a>
             </div>
             <div class="activite-garde">
                 <a href="#">
-                    <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notre dame">
+                    <img src="images/activites/Notre_Dame_de_la_Garde.jpg" alt="notre dame">
                     <h3>Notre-Dame-de-la-Garde</h3>
                 </a>
             </div>
             <div class="activite-longchamps">
                 <a href="#">
-                    <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="longchamps">
+                    <img src="images/activites/Parc_Longchamg.jpg" alt="longchamps">
                     <h3>Parc Longchamg</h3>
                 </a>
             </div>
